# llm.rs

./: .actrc  .gitignore  .gitpod.yml  Makefile  README.md  prepro_tinyshakespeare.py  prepro_tinystories.py  result.py  train  train_gpt2.py
.github/workflows/: build.yml
data/: README.md
llm-rs/: Cargo.toml
llm-rs/benches/: data_loader.rs  matmul_forward.rs
llm-rs/src/: dataloader.rs  lib.rs  main.rs  send_ptr.rs  tokenizer.rs
llm-rs/src/gpt2/: activation_tensors.rs  mod.rs  parameter_tensors.rs  passes.rs  util.rs
plot_gen/: plot.py
plot_gen/results/i7_9700/: result_c.txt  result_cpp.txt  result_rs.txt
plot_gen/results/xeon_e5/: result_c.txt  result_cpp.txt  result_mojo.txt  result_rs.txt
