[package]
name = "llm-rs"
version = "0.1.0"
authors = ["Yijun Yu", "Vitali Borsak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrixmultiply = { version = "0.3.9", features = ["threading"] }
rayon = "1.9.0"

[dev-dependencies]
criterion = "*"

# Build optimized binaries with debug info for use by profiling tools.
[profile.release]
debug = 1
[profile.bench]
debug = 1

[lib]
name = "llm_rs"
path = "src/lib.rs"

[[bench]]
name = "data_loader"
harness = false
